fixed saving throws div overflows low resolution

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     font-family: 'Sofia Sans Semi Condensed', sans-serif;
     color:rgb(208, 217, 224);
-    height: 100vh;
+    height: 500vh;
     background: hsla(84, 56%, 5%, 1);
     background: linear-gradient(180deg, hsla(84, 56%, 5%, 1) 0%, hsla(261, 84%, 7%, 1) 100%);
     background-size: contain;
@@ -25,8 +25,8 @@ body {
     height: 100%;
     margin: 1%;
     padding: 0px;
-    width: 100%;
-    overflow: hidden;
+   
+    overflow:auto;
 }
 .modifier {
     box-shadow: 0 4px 2px -2px black;
@@ -40,7 +40,7 @@ input {
 }
 .app {
     display: flex;
-    flex-wrap: none;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
     align-content: flex-start;
@@ -69,7 +69,7 @@ button.edit {
     border: 2px solid #7a7a7a;
 }
 .modifiersContainer {
-    width: 5%;
+    width: 10%;
 }
 .modifiersContainer input {
     width: 45%;
@@ -116,6 +116,8 @@ textarea {
 
 .savingThrows{
     display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 1;
 }
 .savingThrows input{
     margin: 0%;
@@ -127,12 +129,13 @@ textarea {
 
 .hpAndAc{
     display: flex;
+    flex-wrap: wrap;
 }
 .hpAndAc input{
-    width:50%
+    width:48%
 }
 .hpAndAc>div{
-    width: 60%;
+    width: 40%;
 }
 
 button:hover{
